[package]
name = "wasmrain"
version = "0.1.0"
authors = ["Matěj Laitl <matej@laitl.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.11"
snapwater = { git = "ssh://git@github.com/strohel/snapwater.git" }
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3.45", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "HtmlInputElement", "Window"] }

[profile.release]
lto = true
